# xion-batch-contracts

./: .gitignore  Cargo.toml
contracts/xion-batch/: Cargo.toml
contracts/xion-batch-oracle-helper/: Cargo.toml
contracts/xion-batch-oracle-helper/src/: contract.rs  msg.rs  state.rs
contracts/xion-batch/src/: contract.rs  error.rs  msg.rs  state.rs  utils.rs
