[package]
name = "xion-batch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std    = "1.1.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.0"
cw2 = "1.1.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
cw721 = { version = "0.18.0" }
cw721-base = { version = "0.18.0", features = ["library"] }
thiserror = "1.0.58"
xion-batch-oracle-helper = { path = "../xion-batch-oracle-helper", features = ["library"] }